# Gratifikasi-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/ai_service/: embedding.py  inference.py  main.py  mlflow_loader.py  qdrant_wrapper.py
apps/ai_service/routers/: cases.py  model_info.py  predict.py
apps/frontend/app/analytics/: page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/app/model-info/: page.tsx
apps/frontend/app/my-reports/: page.tsx
apps/frontend/app/review/: page.tsx
apps/trainer/: data_loader.py  metrics.py  mlflow_utils.py  train.py
apps/web/: manage.py
apps/web/gratifikasi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/web/records/: admin.py  auth_urls.py  auth_views.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/web/records/migrations/: 0001_initial.py  0002_gratifikasirecord_ai_result_json_and_more.py  0003_gratifikasirecord_context_gratifikasirecord_country_and_more.py
data/: synthetic_training_data.jsonl
infra/docker/: ai.Dockerfile  trainer.Dockerfile  web.Dockerfile  worker.Dockerfile
libs/common/: logging.py  settings.py
scripts/: generate_synthetic_data.py  promote_to_production.py
