[project]
name = "gratifikasi-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "django-celery-beat>=2.5",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "gunicorn>=21.2",
    "uvicorn[standard]>=0.27",
    "fastapi>=0.110",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "transformers>=4.38",
    "torch>=2.2",
    "datasets>=2.18",
    "evaluate>=0.4",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.6",
    "mlflow>=2.11",
    "qdrant-client>=1.8",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "boto3>=1.34",
    "accelerate>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]
