[project]
name = "gratifikasi-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # shared across all services
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Django web + Celery worker/beat
web = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.3",
    "django-celery-beat>=2.5",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "gunicorn>=21.2",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "numpy>=1.26",
]
# FastAPI AI inference service — no PyTorch, uses ONNX Runtime
ai = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "transformers>=4.38",   # tokenizer only, no torch backend needed
    "fastembed>=0.2",       # ONNX-based embeddings, replaces sentence-transformers
    "onnxruntime>=1.17",    # ONNX inference, replaces torch
    "mlflow>=2.11",
    "qdrant-client>=1.8",
    "numpy>=1.26",
    "boto3>=1.34",
]
# Trainer / fine-tuning pipeline — PyTorch required here
trainer = [
    "transformers>=4.38",
    "torch>=2.2",
    "datasets>=2.18",
    "evaluate>=0.4",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
    "accelerate>=0.27",
    "optimum[onnxruntime]>=1.18",  # ONNX export after training
    "numpy>=1.26",
    "boto3>=1.34",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]
